--- a/.gitignore
+++ b/.gitignore
@@ -19,10 +19,13 @@ nbproject/
 /public/assets/scss/cache
 /public/assets/css/cache
 /public/assets/compiled
+cache
+compiled
 *.cache
 /fuel/app/config/development/migrations.php
 /fuel/app/config/production/migrations.php
 /fuel/packages/sprockets
 /fuel/packages/cmf
-cache
-compiled
+/db/backups
+node_modules
+/public/components
