--- a/bower.json
+++ b/bower.json
@@ -13,9 +13,8 @@
     "jquery-placeholder": "~2.0.8",
     "jquery.easing": "~1.3.0",
     "imagesloaded": "~3.1.7",
-    "magnific-popup": "~0.9.9"
+    "magnific-popup": "~0.9.9",
+    "fiber": "*"
   },
-  "devDependencies": {
-
-  }
+  "devDependencies": {}
 }
