--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "~0.6.1",
     "connect-livereload": "~0.3.1",
-    "grunt-spritesmith": "~2.1.0"
+    "grunt-spritesmith": "~2.1.0",
+    "grunt-contrib-cssmin": "~0.10.0"
   }
 }
