--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "jquery.easing": "~1.3.1",
     "imagesloaded": "~3.1.8",
     "magnific-popup": "~1.0.0",
-    "bootstrap-sass": "~3.3.3"
+    "bootstrap-sass": "~3.3.3",
+    "FlexSlider": "*"
   },
   "devDependencies": {}
 }
