--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
   "license": "ISC",
   "devDependencies": {
     "bower": "~1.3.12",
+    "connect-livereload": "~0.5.2",
     "grunt": "~0.4.5",
+    "grunt-cache-bust": "^0.4.8",
     "grunt-cli": "0.1.13",
     "grunt-contrib-concat": "~0.5.0",
-    "grunt-sass": "~0.17.0",
+    "grunt-contrib-cssmin": "~0.12.1",
     "grunt-contrib-uglify": "~0.7.0",
     "grunt-contrib-watch": "~0.6.1",
-    "connect-livereload": "~0.5.2",
-    "grunt-spritesmith": "~3.6.1",
-    "grunt-contrib-cssmin": "~0.12.1"
+    "grunt-sass": "~0.17.0",
+    "grunt-sass-globbing": "^1.1.0",
+    "grunt-spritesmith": "~3.6.1"
   }
 }
