--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "grunt-cache-bust": "^0.4.8",
     "grunt-cli": "0.1.13",
     "grunt-contrib-concat": "~0.5.0",
+    "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-cssmin": "~0.12.1",
     "grunt-contrib-uglify": "~0.7.0",
     "grunt-contrib-watch": "~0.6.1",
