--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "grunt-contrib-cssmin": "~0.12.1",
     "grunt-contrib-uglify": "~0.7.0",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-sass": "~0.17.0",
+    "grunt-sass": "~0.18.1",
     "grunt-sass-globbing": "^1.1.0",
-    "grunt-spritesmith": "~3.6.1"
+    "grunt-spritesmith": "~3.6.1",
+    "grunt-hub":"~0.7.0"
   }
 }
