--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "grunt-contrib-cssmin": "~0.14.0",
     "grunt-contrib-uglify": "~0.11.0",
     "grunt-contrib-watch": "~0.6.1",
+    "grunt-csssplit": "^0.4.0",
+    "grunt-hub": "~0.7.0",
     "grunt-sass": "~1.1.0",
     "grunt-sass-globbing": "^1.1.0",
-    "grunt-spritesmith": "~6.3.0",
-    "grunt-hub":"~0.7.0"
+    "grunt-spritesmith": "~6.3.0"
   }
 }
