--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "php": ">=5.3.3",
         "monolog/monolog": "1.5.*",
     	"fuelphp/upload": "2.0",
-        "soundintheory/fuel-cmf": "1.*"
+        "soundintheory/fuel-cmf": "dev-master"
     },
     "suggest": {
         "mustache/mustache": "Allow Mustache templating with the Parser package",
