--- a/package.json
+++ b/package.json
@@ -8,25 +8,31 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@git.sitdev.co.uk:starter-project.git"
+    "url": "git@bitbucket.org:soundintheory/starter-project.git"
   },
   "author": "Sound in Theory",
   "license": "ISC",
-  "devDependencies": {
-    "bower": "~1.7.1",
+  "dependencies": {
+    "bootstrap-sass": "~3.3.7",
+    "bourbon": "~4.2.0",
     "connect-livereload": "~0.5.2",
-    "grunt": "~0.4.5",
-    "grunt-cache-bust-alt": "~0.6.1",
-    "grunt-cli": "0.1.13",
-    "grunt-contrib-concat": "~0.5.0",
-    "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-cssmin": "~0.14.0",
-    "grunt-contrib-uglify": "~0.11.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-csssplit": "^0.4.0",
-    "grunt-hub": "~0.7.0",
-    "grunt-sass": "~1.1.0",
-    "grunt-sass-globbing": "^1.1.0",
-    "grunt-spritesmith": "~6.3.0"
+    "fontawesome": "^4.7.2",
+    "html5shiv": "~3.7.3",
+    "imagesloaded": "~3.2.0",
+    "jquery": "2.2.4",
+    "jquery-placeholder": "~2.1.0",
+    "magnific-popup": "^1.1.0",
+    "parsleyjs": "^2.8.0",
+    "slick-carousel": "^1.8.1"
+  },
+  "devDependencies": {
+    "webpack": "^3.8.1",
+    "css-loader": "^0.28.7",
+    "sass-loader": "^6.0.6",
+    "node-sass": "^4.5.3",
+    "style-loader": "^0.19.0",
+    "resolve-url-loader": "^2.1.1",
+    "url-loader": "^0.6.2",
+    "file-loader": "^1.1.5"
   }
 }
