--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "public/index.php",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "watch": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,7 @@
     "style-loader": "^0.19.0",
     "resolve-url-loader": "^2.1.1",
     "url-loader": "^0.6.2",
-    "file-loader": "^1.1.5"
+    "file-loader": "^1.1.5",
+    "glob": "^7.1.2"
   }
 }
