--- a/package.json
+++ b/package.json
@@ -27,14 +27,17 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
-    "webpack": "^3.8.1",
     "css-loader": "^0.28.7",
-    "sass-loader": "^6.0.6",
-    "node-sass": "^4.5.3",
-    "style-loader": "^0.19.0",
-    "resolve-url-loader": "^2.1.1",
-    "url-loader": "^0.6.2",
     "file-loader": "^1.1.5",
-    "glob": "^7.1.2"
+    "glob": "^7.1.2",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "request": "^2.83.0",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.8.1",
+    "webpack-concat-plugin": "^1.4.2",
+    "webpack-livereload-plugin": "^1.0.0",
+    "webpack-spritesmith": "^0.3.3"
   }
 }
