--- a/package.json
+++ b/package.json
@@ -14,28 +14,28 @@
   "author": "Sound in Theory",
   "license": "ISC",
   "dependencies": {
-    "bootstrap-sass": "~3.3.7",
+    "bootstrap-sass": "^3.3.7",
     "bourbon": "~4.2.0",
-    "connect-livereload": "~0.5.2",
+    "connect-livereload": "^0.6.0",
     "fontawesome": "^4.7.2",
     "html5shiv": "~3.7.3",
     "imagesloaded": "~3.2.0",
-    "jquery": "2.2.4",
+    "jquery": "~2.2.4",
     "jquery-placeholder": "~2.1.0",
     "magnific-popup": "^1.1.0",
-    "parsleyjs": "^2.8.0",
+    "parsleyjs": "~2.8.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "css-loader": "^0.28.7",
-    "file-loader": "^1.1.5",
+    "file-loader": "~1.1.5",
     "glob": "^7.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "request": "^2.83.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.4",
     "webpack-concat-plugin": "^1.4.2",
     "webpack-livereload-plugin": "^1.0.0",
     "webpack-spritesmith": "^0.3.3"
