--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "bootstrap-sass": "^3.3.7",
     "bourbon": "~4.2.0",
     "connect-livereload": "^0.6.0",
-    "fontawesome": "^4.7.2",
+    "font-awesome": "~4.7.0",
     "html5shiv": "~3.7.3",
     "imagesloaded": "~3.2.0",
     "jquery": "~2.2.4",
